[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "scipy>=1.15.2",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.44.1",
    "trafilatura>=2.0.0",
    "xlsxwriter>=3.2.3",
]
